--- a/templates/DeliveryGroup.j2
+++ b/templates/DeliveryGroup.j2
@@ -16,6 +16,9 @@ $assignedGroup = {{ assignedGroup }}
 $machineCatalogName = {{ machineCatalogName }}
 # ----------
 
+# Ensure the connection is made to Citrix Cloud
+Set-XDCredentials -CustomerId $CustomerID -ProfileType CloudToken -APIKey $ApiKey -SecretKey $Secrets
+
 # Change to SilentlyContinue to avoid verbose output
 $VerbosePreference = "Continue"
 
