--- a/templates/vdi_build.json.j2
+++ b/templates/vdi_build.json.j2
@@ -2,19 +2,17 @@
     "builders": [{
       "type": "azure-arm",
   
-      "client_id": "fcf428c1-93a4-48ae-baf4-f8d6f4eba0e2",
-      "client_secret": ".UtMU~N-0t70nUEZkNVx2Zks~m3~SBegpR",
-      "tenant_id": "9c098977-6fd6-46bd-a109-6d983952bd01",
-      "subscription_id": "760a0941-f66f-4158-9521-c2ef5b730f07",
+      "tenant_id": "{{ tenantId }}",
+      "subscription_id": "{{ subscriptionId }}",
   
       "build_resource_group_name": "ImageBakery",
       "managed_image_resource_group_name": "rg-packerimages",
-      "managed_image_name": "entpackerimage19h1v3",
-      "virtual_network_name": "citrix-vnet",
-      "virtual_network_subnet_name": "default",
+      "managed_image_name": "Windows10Base",
+      "virtual_network_name": "{{ azureVNet }}",
+      "virtual_network_subnet_name": "{{ VDISubnet }}",
       "private_virtual_network_with_public_ip": true,
-      "virtual_network_resource_group_name": "citrix",
-      "managed_image_os_disk_snapshot_name": "entpackerimage19h1v3",
+      "virtual_network_resource_group_name": "{{ azureResourceGroup }}",
+      "managed_image_os_disk_snapshot_name": "Windows10Base_snapshot",
       "os_type": "Windows",
       "image_publisher": "MicrosoftWindowsDesktop",
       "image_offer": "Windows-10",
@@ -43,33 +41,29 @@
       },
       {
         "type": "powershell",
-        "script": ".\\scripts\\installs.ps1"
+        "script": ".\\installs.ps1"
       },
       {
         "type": "powershell",
         "execution_policy": "unrestricted",
-        "script": ".\\scripts\\vda.ps1"
+        "script": ".\\vda.ps1"
       },
       {
         "type": "powershell",
         "execution_policy": "unrestricted",
-        "script": ".\\scripts\\baseline_svc.ps1"
+        "script": ".\\baseline_svc.ps1"
       },
       {
         "type": "powershell",
         "execution_policy": "unrestricted",
-        "script": ".\\scripts\\baseline_features.ps1"
+        "script": ".\\baseline_features.ps1"
       },
       {
       "type": "powershell",
       "inline": [
         "Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))",
         "choco feature enable -n=allowGlobalConfirmation",
-        "choco install notepadplusplus",
-        "while ((Get-Service RdAgent).Status -ne 'Running') { Start-Sleep -s 5 }",
-        "while ((Get-Service WindowsAzureGuestAgent).Status -ne 'Running') { Start-Sleep -s 5 }",
-        "& $env:SystemRoot\\System32\\Sysprep\\Sysprep.exe /oobe /generalize /quiet /quit",
-        "while($true) { $imageState = Get-ItemProperty HKLM:\\SOFTWARE\\Microsoft\\Windows\\CurrentVersion\\Setup\\State | Select ImageState; if($imageState.ImageState -ne 'IMAGE_STATE_GENERALIZE_RESEAL_TO_OOBE') { Write-Output $imageState.ImageState; Start-Sleep -s 10  } else { break } }"
+        "choco install notepadplusplus"
       ]
     }]
   }
