--- a/templates/vdi_build.j2
+++ b/templates/vdi_build.j2
@@ -2,18 +2,18 @@
     "builders": [{
       "type": "azure-arm",
   
-      "client_id": "",
-      "client_secret": "",
-      "tenant_id": "",
-      "subscription_id": "",
+      "client_id": "{{ clientID }}",
+      "client_secret": "{{ clientSecret }}",
+      "tenant_id": "{{ tenantID }}",
+      "subscription_id": "{{ subscriptionID }}",
   
       "build_resource_group_name": "ImageBakery",
       "managed_image_resource_group_name": "rg-packerimages",
       "managed_image_name": "entpackerimage19h1v3",
-      "virtual_network_name": "{{ vdi_virtual_network_name }}",
-      "virtual_network_subnet_name": "{{ vdi_virtual_network_subnet_name }}",
+      "virtual_network_name": "{{ virtualNetworkName }}",
+      "virtual_network_subnet_name": "{{ subnet0Name }}",
       "private_virtual_network_with_public_ip": true,
-      "virtual_network_resource_group_name": "{{ vdi_virtual_network_resource_group_name }}",
+      "virtual_network_resource_group_name": "{{ virtualNetworkResourceGroupName }}",
       "managed_image_os_disk_snapshot_name": "entpackerimage19h1v3",
       "os_type": "Windows",
       "image_publisher": "MicrosoftWindowsDesktop",
@@ -30,7 +30,7 @@
           "dept": "Engineering",
           "task": "Image deployment"
       },
-      "vm_size": "{{ vdi_vm_size }}",
+      "vm_size": "{{ VDIVMSize }}",
       "async_resourcegroup_delete":true
     }],
     "provisioners": [
