Fix syntax error

--- a/templates/vdi_build.j2
+++ b/templates/vdi_build.j2
@@ -61,7 +61,7 @@
         "choco feature enable -n=allowGlobalConfirmation",
         "choco install notepadplusplus",
         "while ((Get-Service RdAgent).Status -ne 'Running') { Start-Sleep -s 5 }",
-        "while ((Get-Service WindowsAzureGuestAgent).Status -ne 'Running') { Start-Sleep -s 5 }",
+        "while ((Get-Service WindowsAzureGuestAgent).Status -ne 'Running') { Start-Sleep -s 5 }"
       ]
     }]
   }
