--- a/templates/vdi_build.j2
+++ b/templates/vdi_build.j2
@@ -1,18 +1,18 @@
 {
     "builders": [{
       "type": "azure-arm",
-      "build_resource_group_name": "ImageBakery",
-      "managed_image_resource_group_name": "rg-packerimages",
-      "managed_image_name": "entpackerimage19h1v3",
+      "build_resource_group_name": "{{ BuildResourceGroupName }}",
+      "managed_image_resource_group_name": "{{ ImageResourceGroupName }}",
+      "managed_image_name": "entpackerimage20h1v3",
       "virtual_network_name": "{{ virtualNetworkName }}",
       "virtual_network_subnet_name": "{{ subnet0Name }}",
       "private_virtual_network_with_public_ip": true,
       "virtual_network_resource_group_name": "{{ NetworkResourceGroupName }}",
-      "managed_image_os_disk_snapshot_name": "entpackerimage19h1v3",
+      "managed_image_os_disk_snapshot_name": "entpackerimage20h1v3",
       "os_type": "Windows",
       "image_publisher": "MicrosoftWindowsDesktop",
       "image_offer": "Windows-10",
-      "image_sku": "19h1-evd",
+      "image_sku": "20h1-evd",
   
       "communicator": "winrm",
       "winrm_use_ssl": true,
